Welcome post and webcrawling

--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
   
   <meta property="description" itemprop="description" content="Some additional details about the blog"/>
   
+  <link rel="license" href="https://creativecommons.org/licenses/by/4.0/"/>
   
   
   <!--  https://developers.facebook.com/docs/sharing/webmasters#markup -->
@@ -36,6 +37,7 @@
   <meta property="twitter:card" content="summary"/>
   <meta property="twitter:title" content="SteinsZeit: About this blog"/>
   <meta property="twitter:description" content="Some additional details about the blog"/>
+  <meta property="twitter:site" content="@SteinsZeit"/>
   
   <!--/radix_placeholder_meta_tags-->
   <!--radix_placeholder_rmarkdown_metadata-->
@@ -1288,6 +1290,12 @@
 <a href="index.xml">
 <i class="fa fa-rss"></i>
 </a>
+<a href="https://twitter.com/SteinsZeit">
+<i class="fab fa-twitter"></i>
+</a>
+<a href="https://github.com/stefan-stein">
+<i class="fab fa-github"></i>
+</a>
 <a href="javascript:void(0);" class="nav-toggle">&#9776;</a>
 </div>
 </nav>
@@ -1303,7 +1311,7 @@
 
 
 <div class="d-article">
-<p>Welcome to my blog! I’m a statistics PhD student at the University of Warwick. I blog about stats and R.</p>
+<p>Welcome to my blog! My name is Stefan Stein and I’m a third year statistics PhD student at the University of Warwick. I blog about stats and R. I obtained my BSc and MSc in mathematics at the University of Heidelberg, Germany, before coming to the UK for my PhD. I like building unconventional stuff in R and Python. Feel free to connect with me via Twitter.</p>
 <!--radix_placeholder_article_footer-->
 <!--/radix_placeholder_article_footer-->
 </div>
@@ -1318,6 +1326,8 @@
 <div class="appendix-bottom">
 <h3 id="updates-and-corrections">Corrections</h3>
 <p>If you see mistakes or want to suggest changes, please <a href="https://github.com/stefan-stein/stefan-stein.github.io/issues/new">create an issue</a> on the source repository.</p>
+<h3 id="reuse">Reuse</h3>
+<p>Text and figures are licensed under Creative Commons Attribution <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>. Source code is available at <a href="https://github.com/stefan-stein/stefan-stein.github.io">https://github.com/stefan-stein/stefan-stein.github.io</a>, unless otherwise noted. The figures that have been reused from other sources don't fall under this license and can be recognized by a note in their caption: "Figure from ...".</p>
 </div>
 <!--/radix_placeholder_appendices-->
 <!--radix_placeholder_navigation_after_body-->
