Social media icons, image

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
   <!--radix_placeholder_meta_tags-->
   <title>SteinsZeit: About this blog</title>
   
-  <meta property="description" itemprop="description" content="Some additional details about the blog"/>
+  <meta property="description" itemprop="description" content="Who am I?"/>
   
   <link rel="license" href="https://creativecommons.org/licenses/by/4.0/"/>
   
@@ -29,21 +29,21 @@
   <!--  https://developers.facebook.com/docs/sharing/webmasters#markup -->
   <meta property="og:title" content="SteinsZeit: About this blog"/>
   <meta property="og:type" content="article"/>
-  <meta property="og:description" content="Some additional details about the blog"/>
+  <meta property="og:description" content="Who am I?"/>
   <meta property="og:locale" content="en_US"/>
   <meta property="og:site_name" content="SteinsZeit"/>
   
   <!--  https://dev.twitter.com/cards/types/summary -->
   <meta property="twitter:card" content="summary"/>
   <meta property="twitter:title" content="SteinsZeit: About this blog"/>
-  <meta property="twitter:description" content="Some additional details about the blog"/>
+  <meta property="twitter:description" content="Who am I?"/>
   <meta property="twitter:site" content="@SteinsZeit"/>
   
   <!--/radix_placeholder_meta_tags-->
   <!--radix_placeholder_rmarkdown_metadata-->
   
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description"]}},"value":[{"type":"character","attributes":{},"value":["About this blog"]},{"type":"character","attributes":{},"value":["Some additional details about the blog"]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description"]}},"value":[{"type":"character","attributes":{},"value":["About this blog"]},{"type":"character","attributes":{},"value":["Who am I?"]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   <!--radix_placeholder_navigation_in_header-->
@@ -1274,7 +1274,7 @@
 <!--radix_placeholder_front_matter-->
 
 <script id="distill-front-matter" type="text/json">
-{"title":"About this blog","description":"Some additional details about the blog","authors":[]}
+{"title":"About this blog","description":"Who am I?","authors":[]}
 </script>
 
 <!--/radix_placeholder_front_matter-->
@@ -1306,12 +1306,27 @@
 
 <div class="d-title">
 <h1>About this blog</h1>
-<p>Some additional details about the blog</p>
+<p>Who am I?</p>
 </div>
 
 
 <div class="d-article">
-<p>Welcome to my blog! My name is Stefan Stein and I’m a third year statistics PhD student at the University of Warwick. I blog about stats and R. I obtained my BSc and MSc in mathematics at the University of Heidelberg, Germany, before coming to the UK for my PhD. I like building unconventional stuff in R and Python. Feel free to connect with me via Twitter.</p>
+<div class="layout-chunk" data-layout="l-body">
+<style type="text/css">
+d-article a,
+d-article a:hover {
+  text-decoration: none;
+  border-bottom: none;
+}
+</style>
+</div>
+<center>
+<img src="websitefotome.jpeg" style="border-radius: 50%; width: 10rem;" />
+</center>
+<p>Welcome to my blog! My name is Stefan Stein and I’m a third year statistics PhD student at the University of Warwick. I blog about maths, stats and R. My PhD is on the asymptotics of random networks and high-dimensional statistics. Before coming to the UK for my PhD I obtained my BSc and MSc in mathematics at the University of Heidelberg, Germany. I like building unconventional stuff in R and Python and I set up this blog to share as well as keep track off some of the programming projects I did. Feel free to connect with me.</p>
+<p style="text-align: center;">
+<a href='mailto:s.stein@warwick.ac.uk' title="E-mail me"> <span class="fa-stack fa-lg"> <i class="fa fa-circle fa-stack-2x"></i> <i class="fa fa-envelope fa-stack-1x fa-inverse"></i> </span> </a> <a href="https://github.com/stefan-stein" title="GitHub"> <span class="fa-stack fa-lg"> <i class="fa fa-circle fa-stack-2x"></i> <i class="fa fa-github fa-stack-1x fa-inverse"></i> </span> </a> <a href="https://www.linkedin.com/in/stefan-s-871429142" title="LinkedIn"> <span class="fa-stack fa-lg"> <i class="fa fa-circle fa-stack-2x"></i> <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i> </span> </a> <a href="https://twitter.com/SteinsZeit" title="Twitter"> <span class="fa-stack fa-lg"> <i class="fa fa-circle fa-stack-2x"></i> <i class="fa fa-twitter fa-stack-1x fa-inverse"></i> </span> </a> <a href="https://warwick.ac.uk/fac/sci/statistics/staff/research_students/stein/" title="Academic page"> <span class="fa-stack fa-lg"> <i class="fa fa-circle fa-stack-2x"></i> <i class="fa fa-graduation-cap fa-stack-1x fa-inverse"></i> </span> </a>
+</p>
 <!--radix_placeholder_article_footer-->
 <!--/radix_placeholder_article_footer-->
 </div>
