--- a/index.html
+++ b/index.html
@@ -1262,6 +1262,13 @@
   <script src="site_libs/webcomponents-2.0.0/webcomponents.js"></script>
   <script src="site_libs/distill-2.2.21/template.v2.js"></script>
   <!--radix_placeholder_site_in_header-->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157630283-1"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-157630283-1');
+  </script>
   <!--/radix_placeholder_site_in_header-->
 
 
@@ -1640,13 +1647,11 @@ However, it does not natively "crawl" the web, i.e. traverse from one website to
 <div class="metadata">
 <div class="publishedDate">Jan. 8, 2020</div>
 </div>
-<div class="thumbnail">
-<img/>
-</div>
+<div class="thumbnail"></div>
 <div class="description">
 <h2>The list of things we all know we should know</h2>
 <p>Welcome to my new blog, SteinsZeit. I hope you enjoy 
-reading what I have to say! For my first blogpost I have compiled a list of useful mathas and programming 
+reading what I have to say! For my first blog post I have compiled a list of useful maths and programming 
 references and guides.</p>
 </div>
 </a>
