Spell chek and preview for concentration inequalities post

--- a/index.html
+++ b/index.html
@@ -1634,14 +1634,14 @@ function init_posts_list() {
 <div class="publishedDate">May 26, 2020</div>
 </div>
 <div class="thumbnail">
-<img data-src="posts/2020-03-07-concentration-properties-of-high-dimensional-normal-distributions/concentration-properties-of-high-dimensional-normal-distributions_files/figure-html5/unnamed-chunk-1-1.png"/>
+<img data-src="posts/2020-03-07-concentration-properties-of-high-dimensional-normal-distributions/deviation.png"/>
 </div>
 <div class="description">
 <h2>Concentration properties of high-dimensional normal distributions</h2>
 <p>Our intuition and experience in low dimensions tells us that random standard normal vectors cluster around the origin.
-In higher dimensions, this is no longer true. Instead, despite having expectation zero, $n$-dimensional vectors with 
-independent $\mathcal{N}(0,1)$ entries will concentrate tightly around a sphere of radius $\sqrt{n}$. 
-In particular, they will be nowhere close to the origin. In this post we look at the mathematical theory behind why
+In higher dimensions, this is no longer true. Instead, despite having expectation zero, n-dimensional vectors with 
+independent N(0,1) entries will concentrate tightly around a sphere of radius n^0.5. 
+In particular, they will be nowhere near the origin. In this post we look at the mathematical theory behind why
 that is.</p>
 </div>
 </a>
@@ -1651,7 +1651,7 @@ that is.</p>
 <div class="publishedDate">Feb. 15, 2020</div>
 </div>
 <div class="thumbnail">
-<img data-src="posts/2020-02-09-webcrawling2/webcrawling2_files/figure-html5/unnamed-chunk-18-1.png"/>
+<img data-src="posts/2020-02-09-webcrawling2/squirrel_network.png"/>
 </div>
 <div class="description">
 <h2>Web crawling with R part 2: Power laws and enlightened squirrels</h2>
