correct typo in website similarities

--- a/index.html
+++ b/index.html
@@ -1639,7 +1639,7 @@ function init_posts_list() {
 <div class="description">
 <h2>Is Batman more like the Joker or more like Robin?</h2>
 <p>Spend enough time in academia and you might start to think that this is an excellent research question. In this post
-I try to give an answer, by calculating the website similarities between the Wikipedia pages of Batman, the Joker and
+I try to give an answer by calculating the website similarities between the Wikipedia pages of Batman, the Joker and
 Robin. Some web scraping, data wrangling and NLP with Python lies ahead!</p>
 </div>
 </a>
